# drone-range-assignment

./: README.md  pyproject.toml
notebooks/: example_1.ipynb  example_2.ipynb  example_3.ipynb  socp.ipynb
src/drone_range_assignment/: __init__.py  instance.py  plotting.py  solution.py  solver.py
