[build-system]
requires = ["setuptools>=45", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "drone_range_assignment"
version = "v0.0.1"
authors = [
    { name = "TU Braunschweig, IBR, Algorithms Group (Dominik Krupke)", email = "krupke@ibr.cs.tu-bs.de" },
]
description = "Range Assignment Optimizer for Networks with Drones "
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "gurobipy",
    "networkx",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/d-krupke/drone_range_assignment"
